--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -1,12 +1,14 @@
-.footer {
-    margin-top: 50px;
-    display: flex;
-    justify-content: center;
-    font-size: 25px;
-    padding: 10px;
-}
-
-.footer > span {
-    color: cyan;
-    margin-right: 10px;
+@media (min-width: 1000px) {
+    .footer {
+            margin-top: 50px;
+            display: flex;
+            justify-content: center;
+            font-size: 25px;
+            padding: 10px;
+        }
+    
+        .footer > span {
+            color: cyan;
+            margin-right: 10px;
+        }
 }
