--- a/src/styles/portfolio.css
+++ b/src/styles/portfolio.css
@@ -1,55 +1,59 @@
-#portfolio {
-    padding: 20px;
+.work-cards {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 50px;
 }
+ul {
+  padding: 0;
+}
+@media (min-width: 1000px) {
+  #portfolio {
+    padding: 20px;
+  }
 
-.portfolio {
-    color: #00FFFF;
+  .portfolio {
+    color: #00ffff;
     font-size: 70px;
     font-family: font-file-82132;
     font-weight: bold;
     margin-left: 30px;
-}
+  }
 
-.port-text {
+  .port-text {
     width: 40%;
     margin-left: 30px;
     margin-bottom: 30px;
-}
+  }
 
-.work-cards {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    gap: 50px;
-}
-
-.card {
+  .card {
     background-color: rgba(122, 120, 120, 0.068);
     padding: 20px;
     width: 30%;
     box-sizing: border-box;
     position: relative;
     overflow: hidden;
-}
+  }
 
-.metro {
+  .metro {
     width: 100%;
     height: 100%;
-}
+  }
 
-.tools-used {
+  .tools-used {
     display: flex;
-    gap: 10px;
-}
+    gap: 5px;
+  }
 
-.tools-used > li {
+  .tools-used > li {
     padding: 10px;
     background-color: rgba(122, 120, 120, 0.068);
     opacity: 0, 7;
     margin: 10px 0;
-}
+  }
 
-.card-text {
+  .card-text {
     position: absolute;
     top: 0;
     left: -100%;
@@ -65,9 +69,9 @@
     background-color: rgba(24, 240, 240, 0.151);
     color: white;
     transition: all 0.5s;
-}
+  }
 
-.card-text > a {
+  .card-text > a {
     display: flex;
     align-items: center;
     font-size: 20px;
@@ -78,13 +82,93 @@
     background-size: 200% 100%;
     background-position: right;
     color: cyan;
-}
+  }
 
-.card-text > a:hover {
+  .card-text > a:hover {
     background-position: left;
     color: black;
+  }
+
+  .card:hover .card-text {
+    left: 0;
+  }
 }
 
-.card:hover .card-text {
+@media (max-width: 999px) {
+  #portfolio {
+    padding: 20px;
+  }
+
+  .card-header {
+    font-size: 20px;
+  }
+
+  .portfolio {
+    color: #00ffff;
+    font-size: 40px;
+    font-family: font-file-82132;
+    font-weight: bold;
+    margin-left: 30px;
+  }
+
+  .port-text {
+    margin-left: 30px;
+    margin-bottom: 30px;
+  }
+
+  .card {
+    background-color: rgba(122, 120, 120, 0.068);
+    padding: 20px;
+    box-sizing: border-box;
+  }
+
+  .metro {
+    width: 100%;
+    height: 100%;
+  }
+
+  .tools-used {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+  }
+
+  .tools-used > li {
+    padding: 10px;
+    background-color: rgba(122, 120, 120, 0.068);
+    opacity: 0, 7;
+  }
+
+  .card-text {
+    padding: 10px;
+    font-size: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    color: white;
+    transition: all 0.5s;
+  }
+
+  .card-text > a {
+    display: flex;
+    align-items: center;
+    font-size: 15px;
+    border: 3px solid cyan;
+    padding: 5px;
+    transition: all 0.5s ease-out;
+    background: linear-gradient(to right, cyan 50%, transparent 50%);
+    background-size: 200% 100%;
+    background-position: right;
+    color: cyan;
+  }
+
+  .card-text > a:hover {
+    background-position: left;
+    color: black;
+  }
+
+  .card:hover .card-text {
     left: 0;
+  }
 }
