--- a/src/styles/services.css
+++ b/src/styles/services.css
@@ -1,3 +1,4 @@
+@media (min-width:1000px) {
 #services {
     display: flex;
     justify-content: space-between;
@@ -49,4 +50,63 @@
 .job-lists > li {
     font-size: 30px;
     font-weight: bold;
+}
+}
+
+@media (max-width: 999px) {
+#services {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        padding: 0 40px 0 50px;
+        background: #070707;
+        margin-bottom: 150px;
+        margin-top: 100px;
+    }
+
+    .languages {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 30px;
+    }
+
+    .try {
+        display: flex;
+        gap: 50px;
+        flex-direction: column;
+    }
+
+    .frontend {
+        font-size: 30px;
+        background-color: rgba(87, 85, 85, 0.068);
+        padding: 3rem;
+        margin-bottom: 2rem;
+        display: flex;
+        align-items: center;
+        gap: 1rem;
+        transition: .3s;
+        font-size: 2rem;
+        border-bottom-left-radius: 2rem;
+        border-top-right-radius: 2rem;
+    }
+
+    .frontend > svg {
+        color: #00FFFF;
+    }
+
+    .job-head {
+        color: #00FFFF;
+    }
+
+    .job-lists {
+        padding: 0;
+    }
+
+    .job-lists > li {
+        font-size: 20px;
+        font-weight: bold;
+    }
+
 }
