--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,8 @@
 }
 
 .App {
+  font-family: 'Dancing Script', cursive;
+    font-family: 'Sevillana', cursive;
 background: #070707;
  margin: 0;
  padding: 0;
