--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -77,6 +77,7 @@
 @media (max-width: 999px) {
     .me {
         width: 100%;
+        margin: 20px 10px 10px 10px;
     }
 
     #about {
@@ -128,12 +129,12 @@
         text-decoration: underline;
         margin-top: 200px;
         margin-bottom: 40px;
-        font-size: 50px;
+        font-size: 20px;
 
     }
 
     .language-used > li {
-        font-size: 30px;
+        font-size: 20px;
 
     }
 
@@ -143,8 +144,5 @@
     }
 
     .splitter {
-        display: flex;
-        justify-content: center;
-        gap: 100px;
     }
 }
