--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -12,3 +12,18 @@
             margin-right: 10px;
         }
 }
+
+@media (max-width: 999px) {
+    .footer {
+        margin-top: 50px;
+        display: flex;
+        justify-content: center;
+        font-size: 20px;
+        padding: 10px;
+    }
+
+    .footer > span {
+        color: cyan;
+        margin-right: 10px;
+    }
+}
