--- a/src/styles/portfolio.css
+++ b/src/styles/portfolio.css
@@ -19,6 +19,8 @@ ul {
     font-family: font-file-82132;
     font-weight: bold;
     margin-left: 30px;
+        font-family: 'Dancing Script', cursive;
+          font-family: 'Sevillana', cursive;
   }
 
   .port-text {
@@ -109,6 +111,8 @@ ul {
     font-family: font-file-82132;
     font-weight: bold;
     margin-left: 30px;
+      font-family: 'Dancing Script', cursive;
+        font-family: 'Sevillana', cursive;
   }
 
   .port-text {
