--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -26,20 +26,20 @@
     textarea {
         width: 500px !important;
         border: none !important;
-        background-color: rgba(87, 85, 85, 0.068);
+        background-color: rgb(248, 247, 247);
         padding: 15px;
         border-radius: 2px;
-        color: white;
+        color: black
     }
 
     input::placeholder {
-        color: white;
+        color: black;
         font-size: 20px;
         padding: 10px;
     }
 
     textarea::placeholder {
-        color: white;
+        color: black;
         font-size: 20px;
     }
 
@@ -74,7 +74,7 @@
     }
 
     .contact-me-header-text {
-        font-size: 20px;
+        font-size: 25px;
         color: cyan;
     }
 
@@ -91,20 +91,20 @@
     input,
     textarea {
         border: none !important;
-        background-color: rgba(87, 85, 85, 0.068);
+        background-color: rgb(248, 247, 247);
         padding: 15px;
         border-radius: 2px;
-        color: white;
+        color: black;
     }
 
     input::placeholder {
-        color: white;
+        color: black;
         font-size: 15px;
         padding: 10px;
     }
 
     textarea::placeholder {
-        color: white;
+        color: black;
         font-size: 20px;
     }
 
