--- a/src/styles/services.css
+++ b/src/styles/services.css
@@ -7,6 +7,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 50px 40px 100px 50px;
+    gap: 30px;
 background: #191970;
     margin-top: 100px;
 }
